<resources>
    <string name="app_name">My Wallet</string>
    <string name="create_budget_db">Create budget</string>
    <string name="profile_db">Profile</string>
    <string name="add_exp_db">Add expense</string>
    <string name="add_custExp_db">Category Payments</string>
    <string name="exit_db">Exit</string>
    <string name="report_db">Reports</string>
    <string name="login_btn">Login</string>
    <string name="login_emailHint">Email</string>
    <string name="login_pwHint">Password</string>
    <string name="db_header">My Dashboard</string>
    <string name="createAccount">No account yet? Create one</string>
    <string name="profile_name">Mark Strong</string>
    <string name="editProfileBtn">Update</string>
    <string name="disableProfileBtn">Disable</string>
    <string name="profileField1">Name</string>
    <string name="profileField2">Email</string>
    <string name="profileField3">Password</string>
    <string name="profileName">Profile</string>
    <string name="reg_btn">Register</string>

    <string name="catName">Add Categories</string>
    <string name="catName1">Category Name:</string>
    <string name="catName2">Amount:</string>
    <string name="List">LIST:</string>
    <string name="button1">UPDATE</string>
    <string name="button2">DELETE</string>
    <string name="budget_duration_start">Start Date for Budget Plan</string>
    <string name="budget_duration_end">End Date for Budget Plan</string>
    <string name="insert_income">Insert Income</string>
    <string name="insert_salary">Insert Salary Income</string>
    <string name="insert_other">Insert Other Income</string>
    <string name="insert_bank">Insert Bank Interests</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="next1">Next</string>
    <string name="add">ADD</string>
    <string name="createbudgetmenu">Create Budget</string>
    <string name="deletebudgetmenu">Delete Budget</string>
    <string name="viewbudgetmenu">View Budget</string>
    <string name="updatebudgetmenu">Edit Budget</string>
    <string name="planbudget">Plan Budget</string>
    <string name="deleteUser">Delete</string>
    <string name="deleteUserPrompt">Are you sure you want to delete your profile?</string>
    <string name="deleteUserCancel">Cancel</string>
    <string name="displayname">Name</string>
    <string name="registerTitle">Register</string>
    <string name="nameHint">Enter display name</string>
    <string name="emailHint">johndoe@gmail.com</string>
    <string name="passwordHint">Enter Password (8 characters minimum)</string>
    <string name="editbudget">Edit Budget</string>
    <string name="updatebudget">Update</string>
    <string name="delbudget">Delete</string>
    <string name="sddis">Start Date</string>
    <string name="eddis">End Date</string>
    <string name="dtod">  to  </string>
    <string name="reportbudget">Total Budget</string>
    <string name="reportexpenses">Total Expenses</string>
    <string name="reportbal">Balance</string>


    <string name="thanuja_addexpenses">Add expenses</string>
    <string name="thanuja_addexpense">Add expense</string>
    <string name="thanuja_amount">Amount</string>
    <string name="thanuja_description">Description</string>
    <string name="thanuja_ok">OK</string>
    <string name="thanuja_cancel">Cancel</string>
    <string name="thanuja_daily">Daily</string>
    <string name="thanuja_monthly">Monthly</string>
    <string name="thanuja_yearly">Yearly</string>


    <!--<string name="catName">ADD CATEGORIES</string>-->
    <!--<string name="catName1">Category Name:</string>-->
    <!--<string name="catName2">Amount:</string>-->
    <!--<string name="List">LIST:</string>-->
    <!--<string name="button1">UPDATE</string>-->
    <!--<string name="button2">DELETE</string>-->
    <!--<string name="budget_duration_start">Start Date for Budget Plan</string>-->
    <!--<string name="budget_duration_end">End Date for Budget Plan</string>-->
    <!--<string name="insert_income">Insert Income</string>-->
    <!--<string name="insert_salary">Insert Salary Income</string>-->
    <!--<string name="insert_other">Insert Other Income</string>-->
    <!--<string name="insert_bank">Insert Bank Interests</string>-->
    <!--<string name="finish">Finish</string>-->
    <!--<string name="next">Next</string>-->
    <!--<string name="next1">Next</string>-->
    <!--<string name="add">ADD</string>-->
    <string name="catmsg1">Add Categories</string>
    <string name="CatName">Name</string>
    <string name="catAmount">Amount</string>
    <string name="catView">View</string>
    <string name="AddCat">Insert</string>
    <string name="updateCategory">Update Category</string>
    <string name="catAddExp">Add Expense</string>
    <string name="tempPassword">12345678</string>
    <string name="updateCredentials">Update Credentials</string>
    <string name="currentEmail">Current Email</string>
    <string name="currentPwUpdate">Current Password</string>
    <string name="newEmailUpdate">New Email</string>
    <string name="newPassword">New Password</string>
</resources>
