<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerUser"
    android:background="@drawable/bgapps"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layoutTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/registerTitle"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/layoutTop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/displayname"
                        android:textSize="28sp" />

                    <EditText
                        android:id="@+id/regDisplayName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nameHint"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_emailHint"
                        android:layout_margin="10dp"
                        android:textSize="28sp"/>

                    <EditText
                        android:id="@+id/regEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/emailHint"
                        android:inputType="textEmailAddress" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_pwHint"
                        android:layout_margin="10dp"
                        android:textSize="28sp"/>

                    <EditText
                        android:id="@+id/regPw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/passwordHint"
                        android:inputType="textPassword" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/regBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorAccent"
                        android:text="@string/reg_btn"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                </LinearLayout>



            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>